Atualizando comando de start para executar testes e2e

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,4 +23,4 @@ jobs:
       - name: 🚀 Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: yarn cy
+          start: yarn cy:run:chrome
